Use appsettings configuration

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,9 @@
 ﻿{
   "ConnectionStrings": {
     "PostgreSQL": "Server={host};Port={port};Database={database};User Id={username};Password={password};"
+  },
+  "Auth": {
+    "SecretKey": "A key used to sign tokens",
+    "AccessTokenLifetimeInMinutes": "5"
   }
 }
