Add refresh token

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,6 +4,7 @@
   },
   "Auth": {
     "SecretKey": "A key used to sign tokens",
-    "AccessTokenLifetimeInMinutes": "5"
+    "AccessTokenLifetimeInMinutes": "5",
+    "RefreshTokenLifetimeInDays": "7"
   }
 }
