--- a/Meetups.csproj
+++ b/Meetups.csproj
@@ -19,4 +19,9 @@
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="Features" />
+      <Folder Include="Persistence" />
+    </ItemGroup>
 </Project>
