Pull out DTOs to a separate "Contract" project

--- a/Backend/Meetups.Backend.Features/Meetups.Backend.Features.csproj
+++ b/Backend/Meetups.Backend.Features/Meetups.Backend.Features.csproj
@@ -16,6 +16,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\Contracts\Meetup.Contract\Meetup.Contract.csproj" />
       <ProjectReference Include="..\Meetups.Backend.Persistence\Meetups.Backend.Persistence.csproj" />
     </ItemGroup>
 
