Rename Core project to Application

--- a/Backend/Meetups.Backend.WebApi/Meetups.Backend.WebApi.csproj
+++ b/Backend/Meetups.Backend.WebApi/Meetups.Backend.WebApi.csproj
@@ -14,7 +14,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Meetups.Backend.Core\Meetups.Backend.Core.csproj" />
+      <ProjectReference Include="..\Meetups.Backend.Application\Meetups.Backend.Application.csproj" />
     </ItemGroup>
 
 </Project>
