Add configuration profiles

--- a/Backend/Meetups.Backend.WebApi/Properties/appSettings.json
+++ b/Backend/Meetups.Backend.WebApi/Properties/appSettings.json
@@ -1,6 +1,10 @@
 ﻿{
-  "ConnectionStrings": {
-    "PostgreSQL": "Server={host};Port={port};Database={database};User Id={username};Password={password};"
+  "Persistence": {
+    "Host": "localhost",
+    "Port": "5432",
+    "Database": "meetups",
+    "Username": "postgres",
+    "Password": "{Your Password}"
   },
   "Auth": {
     "SecretKey": "A key used to sign tokens",
