--- a/Backend/Meetups.Backend.Persistence/Meetups.Backend.Persistence.csproj
+++ b/Backend/Meetups.Backend.Persistence/Meetups.Backend.Persistence.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.2" />
     </ItemGroup>
 
