--- a/Contracts/Meetup.Contract/Meetup.Contract.csproj
+++ b/Contracts/Meetup.Contract/Meetup.Contract.csproj
@@ -9,4 +9,8 @@
         <NoWarn>$(NoWarn);1591</NoWarn>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
+    </ItemGroup>
+
 </Project>
