Add swagger configuration

--- a/Meetups.WebApi/Properties/appSettings.json
+++ b/Meetups.WebApi/Properties/appSettings.json
@@ -10,5 +10,10 @@
     "SecretKey": "A key used to sign tokens",
     "AccessTokenLifetimeInMinutes": "5",
     "RefreshTokenLifetimeInDays": "7"
+  },
+  "Swagger": {
+    "SwaggerEnabled": true,
+    "SwaggerUiRoutePrefix": "api",
+    "ShowSchemasInSwaggerUi": false
   }
 }
