--- a/docker-compose.env.sample
+++ b/docker-compose.env.sample
@@ -1,5 +1,8 @@
 APP_EXTERNAL_PORT="5365"
 APP_ENVIRONMENT="Development"
+APP_ENABLE_SWAGGER="true"
+APP_SWAGGER_UI_ROUTE_PREFIX="api"
+APP_SHOW_SCHEMAS_IN_SWAGGER="false"
 APP_TOKEN_KEY="A key used to sign tokens"
 APP_ACCESS_TOKEN_LIFETIME_IN_MINUTES="5"
 APP_REFRESH_TOKEN_LIFETIME_IN_DAYS="7"
