Fix script path

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Check migrations file
-        run: chmod +x ./github/scripts/check-migrations-file.sh && ./github/scripts/check-migrations-file.sh
+        run: chmod +x ./.github/scripts/ckeck-migrations-file.sh && ./.github/scripts/ckeck-migrations-file.sh
         shell: bash
 
   dotnet-test:
