--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Check migrations file
         run: chmod +x ./.github/scripts/ckeck-migrations-file.sh && ./.github/scripts/ckeck-migrations-file.sh
-        shell: bash
+        shell: sh
 
   dotnet-test:
     runs-on: ubuntu-latest
