--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,6 +25,14 @@ jobs:
           chmod +x ./.github/scripts/ckeck-migrations-file.sh
           ./.github/scripts/ckeck-migrations-file.sh
 
+  dockerfile-test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      
+      - name: Build docker image
+        run: docker build --no-cache ./        
+
   dotnet-test:
     runs-on: ubuntu-latest
     steps:
