--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
       - dev
 
 jobs:
-  check-migrations:
+  check-unified-migrations-file:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -25,7 +25,7 @@ jobs:
           chmod +x ./.github/scripts/ckeck-migrations-file.sh
           ./.github/scripts/ckeck-migrations-file.sh
 
-  dockerfile-test:
+  build-dockerfile:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -33,7 +33,7 @@ jobs:
       - name: Build docker image
         run: docker build --no-cache ./        
 
-  dotnet-test:
+  run-dotnet-tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
